--- a/style.css
+++ b/style.css
@@ -104,3 +104,38 @@ body {
   border-top: 1px solid #f5d581;
   border-bottom: 1px solid #f5d581;
 }
+
+.review__item {
+  display: grid;
+  margin-bottom: 30px;
+  column-gap: 22px;
+  grid-template-columns: 50px 1fr;
+  grid-template-rows: 27px 1fr;
+}
+
+.review__image-wrapper {
+  width: 50px;
+  height: 50px;
+  background-color: #9f7303;
+  border-radius: 50%;
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+}
+
+.review__item img {
+  text-indent: -100vw;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.review__name {
+  margin: 0;
+  font-weight: 500;
+  font-size: 14px;
+}
+
+.review__text {
+  margin: 0;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
